@@ -3,8 +3,6 @@ package com.github.argon.sos.mod.sdk.ui;
 import com.github.argon.sos.mod.sdk.ModSdkModule;
 import com.github.argon.sos.mod.sdk.game.util.UiUtil;
 import com.github.argon.sos.mod.sdk.ui.layout.Layouts;
-import com.github.argon.sos.mod.sdk.util.Lists;
-import com.github.argon.sos.mod.sdk.util.Maps;
 import com.github.argon.sos.mod.sdk.util.ReflectionUtil;
 import init.sprite.SPRITES;
 import init.sprite.UI.Icon;
@@ -24,7 +22,6 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class UiShowroom extends GuiSection {
 
@@ -39,7 +36,7 @@ public class UiShowroom extends GuiSection {
                 GuiSection section = UiUtil.toGuiSection(entry.getValue());
                 section.hoverInfoSet("SPRITES.icons().s." + entry.getKey().getName());
                 return section;
-            }).collect(Collectors.toList());
+            }).toList();
         GuiSection iconsSmallSection = Layouts.flow(iconsSmall, null, null, width, 100, 0);
 
         // Medium Icons
@@ -49,7 +46,7 @@ public class UiShowroom extends GuiSection {
                 GuiSection section = UiUtil.toGuiSection(entry.getValue());
                 section.hoverInfoSet("SPRITES.icons().m." + entry.getKey().getName());
                 return section;
-            }).collect(Collectors.toList());
+            }).toList();
         GuiSection iconsMediumSection = Layouts.flow(iconsMedium, null, null, width,150, 0);
 
         // Large Icons
@@ -59,7 +56,7 @@ public class UiShowroom extends GuiSection {
                 GuiSection section = UiUtil.toGuiSection(entry.getValue());
                 section.hoverInfoSet("SPRITES.icons().l." + entry.getKey().getName());
                 return section;
-            }).collect(Collectors.toList());
+            }).toList();
         GuiSection iconsLargeSection = Layouts.flow(iconsLarge, null, null, width, 100, 0);
 
         // COLOR
@@ -71,7 +68,7 @@ public class UiShowroom extends GuiSection {
                 ColorBox colorBox = new ColorBox(24, 24, entry.getValue());
                 colorBox.hoverInfoSet("COLOR." + entry.getKey().getName());
                 return colorBox;
-            }).collect(Collectors.toList());
+            }).toList();
         GuiSection colorsSection = Layouts.flow(colors, null, null, width, 100, 0);
 
         // COLOR.UNIQUE
@@ -93,7 +90,7 @@ public class UiShowroom extends GuiSection {
                 ColorBox colorBox = new ColorBox(24, 24, entry.getValue());
                 colorBox.hoverInfoSet("GCOLOR.T()." + entry.getKey().getName());
                 return colorBox;
-            }).collect(Collectors.toList());
+            }).toList();
         GuiSection gColorsTextSection = Layouts.flow(gColorsText, null, null, width, 100, 0);
 
         // GCOLOR.UI()
@@ -105,26 +102,26 @@ public class UiShowroom extends GuiSection {
                 ColorBox colorBox = new ColorBox(24, 24, entry.getValue());
                 colorBox.hoverInfoSet("GCOLOR.UI()." + entry.getKey().getName());
                 return colorBox;
-            }).collect(Collectors.toList());
+            }).toList();
         GuiSection gColorsUISection = Layouts.flow(gColorsUI, null, null, width, 100, 0);
 
         // simple button with description
-        Button button = new Button("Button", "A button.");
+        Button<String> button = new Button<>("Button", "A button.");
 
         // vertical or horizontal arranged set of buttons
         ButtonMenu<String> buttonMenu = ButtonMenu.<String>builder()
-            .button("button1", new Button("Menu 1"))
-            .button("button2", new Button("Menu 2"))
-            .button("button3", new Button("Menu 3"))
+            .button("button1", new Button<>("Menu 1"))
+            .button("button2", new Button<>("Menu 2"))
+            .button("button3", new Button<>("Menu 3"))
             .sameWidth(true)
             .build();
 
         // set of buttons with the ability to toggle
         Switcher<String> switcher = Switcher.<String>builder()
             .menu(ButtonMenu.<String>builder()
-                .button("button1", new Button("Toggle 1"))
-                .button("button2", new Button("Toggle 2"))
-                .button("button3", new Button("Toggle 3"))
+                .button("button1", new Button<>("Toggle 1"))
+                .button("button2", new Button<>("Toggle 2"))
+                .button("button3", new Button<>("Toggle 3"))
                 .sameWidth(true)
                 .build())
             .activeKey("button1")
@@ -135,9 +132,9 @@ public class UiShowroom extends GuiSection {
         DropDown<String> dropDown = DropDown.<String>builder()
             .menu(Switcher.<String>builder()
                 .menu(ButtonMenu.<String>builder()
-                    .button("button1", new Button("Option 1"))
-                    .button("button2", new Button("Option 2"))
-                    .button("button3", new Button("Option 3"))
+                    .button("button1", new Button<>("Option 1"))
+                    .button("button2", new Button<>("Option 2"))
+                    .button("button3", new Button<>("Option 3"))
                     .sameWidth(true)
                     .build())
                 .highlight(true)
@@ -147,32 +144,32 @@ public class UiShowroom extends GuiSection {
             .build();
 
         // Notifications
-        Button errorButton = new Button("Error Notification");
+        Button<String> errorButton = new Button<>("Error Notification");
         errorButton.hoverInfoSet("Opens an error notification popup");
         errorButton.clickActionSet(() -> {
             notificator.notifyError("Error Notification");
         });
         errorButton.bg(COLOR.RED50);
-        Button successButton = new Button("Success Notification");
+        Button<String> successButton = new Button<>("Success Notification");
         successButton.hoverInfoSet("Opens a success notification popup");
         successButton.clickActionSet(() -> {
             notificator.notifySuccess("Success Notification");
         });
         successButton.bg(COLOR.GREEN40);
-        Button normalButton = new Button("Normal Notification");
+        Button<String> normalButton = new Button<>("Normal Notification");
         normalButton.hoverInfoSet("Opens a normal notification popup");
         normalButton.clickActionSet(() -> {
             notificator.notify("Notification");
         });
         normalButton.bg(COLOR.WHITE85);
-        ButtonMenu<Object> notificationButtons = ButtonMenu.builder()
+        ButtonMenu<String> notificationButtons = ButtonMenu.<String>builder()
             .button("error", errorButton)
             .button("success", successButton)
             .button("normal", normalButton)
             .sameWidth(true)
             .build();
 
-        List<RENDEROBJ> buttonElements = Lists.of(
+        List<RENDEROBJ> buttonElements = List.of(
             button,
             buttonMenu,
             switcher,
@@ -201,7 +198,7 @@ public class UiShowroom extends GuiSection {
             .description("A label.")
             .build();
 
-        List<RENDEROBJ> otherElements = Lists.of(
+        List<RENDEROBJ> otherElements = List.of(
             label,
             checkbox,
             slider
@@ -218,7 +215,7 @@ public class UiShowroom extends GuiSection {
                 .column(Label.builder()
                     .name("Row 1")
                     .build())
-                .column(new Button("Button 1"))
+                .column(new Button<>("Button 1"))
                 .column(new Checkbox(true))
                 .build())
             .row(ColumnRow.builder()
@@ -226,7 +223,7 @@ public class UiShowroom extends GuiSection {
                 .column(Label.builder()
                     .name("Row 2")
                     .build())
-                .column(new Button("Button 2"))
+                .column(new Button<>("Button 2"))
                 .column(new Checkbox(false))
                 .build())
             .row(ColumnRow.builder()
@@ -234,7 +231,7 @@ public class UiShowroom extends GuiSection {
                 .column(Label.builder()
                     .name("Row 3")
                     .build())
-                .column(new Button("Button 3"))
+                .column(new Button<>("Button 3"))
                 .column(new Checkbox(true))
                 .build())
             .row(ColumnRow.builder()
@@ -242,7 +239,7 @@ public class UiShowroom extends GuiSection {
                 .column(Label.builder()
                     .name("Row 4")
                     .build())
-                .column(new Button("Button 4"))
+                .column(new Button<>("Button 4"))
                 .column(new Checkbox(true))
                 .build())
             .row(ColumnRow.builder()
@@ -250,7 +247,7 @@ public class UiShowroom extends GuiSection {
                 .column(Label.builder()
                     .name("Row 5")
                     .build())
-                .column(new Button("Button 5"))
+                .column(new Button<>("Button 5"))
                 .column(new Checkbox(false))
                 .build())
             .row(ColumnRow.builder()
@@ -258,7 +255,7 @@ public class UiShowroom extends GuiSection {
                 .column(Label.builder()
                     .name("Row 6")
                     .build())
-                .column(new Button("Button 6"))
+                .column(new Button<>("Button 6"))
                 .column(new Checkbox(true))
                 .build())
             .search(searchInput)
@@ -266,10 +263,10 @@ public class UiShowroom extends GuiSection {
             .rowPadding(5)
             .evenOdd(true)
             .displayHeight(150)
-            .headerButtons(Maps.of(
-                "column1", new Button("Column 1"),
-                "column2", new Button("Column 2"),
-                "column3", new Button("Column 3")
+            .headerButtons(Map.of(
+                "column1", new Button<>("Column 1"),
+                "column2", new Button<>("Column 2"),
+                "column3", new Button<>("Column 3")
             ))
             .build();
 
@@ -280,9 +277,9 @@ public class UiShowroom extends GuiSection {
         Tabulator<String, RENDEROBJ, Void> tabulator = Tabulator.<String, RENDEROBJ, Void>builder()
             .tabMenu(Switcher.<String>builder()
                 .menu(ButtonMenu.<String>builder()
-                    .button("tab1", new Button("Tab 1"))
-                    .button("tab2", new Button("Tab 2"))
-                    .button("tab3", new Button("Tab 3"))
+                    .button("tab1", new Button<>("Tab 1"))
+                    .button("tab2", new Button<>("Tab 2"))
+                    .button("tab3", new Button<>("Tab 3"))
                     .sameWidth(true)
                     .spacer(true)
                     .margin(20)
@@ -291,7 +288,7 @@ public class UiShowroom extends GuiSection {
                 .activeKey("tab1")
                 .highlight(true)
                 .build())
-            .tabs(Maps.of(
+            .tabs(Map.of(
                 "tab1", new GHeader("Tab Content 1"),
                 "tab2", new GHeader("Tab Content 2"),
                 "tab3", new GHeader("Tab Content 3")
